fixed dropdown visibility

--- a/app/javascript/stylesheets/components/_navigation.scss
+++ b/app/javascript/stylesheets/components/_navigation.scss
@@ -1,42 +1,17 @@
 .dropdown {
   position: relative;
-  min-width: 180px;
+  min-width: 220px;
   z-index: 2;
 
-  .dropdown-target {
-    border: 1px solid transparent;
-
-    &:hover {
-      border: 1px solid #dae1e7;
-    }
-  }
-
-  &.dropdown-user-account {
-    min-width: 220px;
-  }
-
-  .dropdown-menu {
+  .dropdown-list {
     background: white;
-    top: 37px;
-    left: 0;
+    min-width: 220px;
+    top: 34px;
+    left: -1px;
     z-index: 1;
-    width: 100%;
-    position: absolute;
-
-    &.dropdown-menu-right {
-      right: 0;
-      left: auto;
-    }
 
     a:hover {
-      svg {
-        fill: white;
-      }
-    }
-
-    li:last-of-type a {
-      border-bottom-right-radius: .25rem;
-      border-bottom-left-radius: .25rem;
+      svg { fill: white; }
     }
   }
 }
